--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,16 @@
 <resources>
     <string name="app_name">NKI Calculator</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="calories">calories</string>
-    <string name="select"></string>
+    <string name="calories">Kilojoules</string>
+    <string name="select"> select </string>
     <string name="select_date">Select Date</string>
     <string name="Total">Total</string>
     <string name="save">save</string>
     <string name="calculate">Calculate</string>
-    <string name="nki">Net Calorie Intake:</string>
+    <string name="nki">Net Kilojoules Intake:</string>
     <string name="date">Date</string>
+    <string name="your_average">Your Average:</string>
+    <string name="calculated_average">Calculated average</string>
     <string-array name="FoodCategories">
         <item>Select Food…</item>
         <item>Breakfast</item>
@@ -17,7 +19,7 @@
         <item>Snack</item>
     </string-array>
     <string-array name="ExerciseCategories">
-        <item>Select Excercise…</item>
+        <item>Select Exercise…</item>
         <item>Running</item>
         <item>Jogging</item>
         <item>Walking</item>
