--- a/app/src/main/res/values-sw-rKE/strings.xml
+++ b/app/src/main/res/values-sw-rKE/strings.xml
@@ -11,4 +11,12 @@
     <string name="calculated_average">Wastani</string>
     <string name="save">Hifadhi</string>
     <string name="select_date">Chagua Tarehe</string>
+    <string name="calories">kalori</string>
+    <string name="canelled">Imefutwa</string>
+    <string name="entry_saved">Imehifadhiwa</string>
+    <string name="fill">Jaza sehemu zote</string>
+    <string name="fill_all">Jaza sehemu zote</string>
+    <string name="last_entry">mwisho</string>
+    <string name="no_entry">mwanzo</string>
+    <string name="select">chagua</string>
 </resources>
